Level two ligature correction

--- a/de/trans/lyLigatur.dita
+++ b/de/trans/lyLigatur.dita
@@ -10,4 +10,8 @@
         <p><codeph>&lt;Glyph id="'Angabe einer eindeutigen ID'" ligature="true"></codeph>
         </p>
     </body>
+    <related-links>
+        <link href="tr_level_1.dita"/>
+        <link href="tr_level_2.dita"/>
+    </related-links>
 </topic>
