--- a/en/trans/trLevels.dita
+++ b/en/trans/trLevels.dita
@@ -72,7 +72,7 @@
             </ul>
         </section>
         <section>
-            <title>Übersichten und Beispiele (betrifft die Transkription von Zeichen)</title>
+            <title>Overviews and examples (concerns transcription of characters)</title>
             <ul id="ul_y4l_k2t_mqb">
                 <li><xref href="trBeispiele.dita">Overviews and examples (concerns transcription of
                         characters)</xref></li>
@@ -139,12 +139,8 @@
                     <p>General rule: Level 3: ñ, Level 2 ñ, Level 1 nn (Always consider the
                         context!!)</p>
                     <p>The normalised paragraph reads:</p>
-                    <p><codeph>underlassen/</codeph>
-                        <b>and</b>
-                        <codeph>fürnemlich</codeph> = Level 1</p>
-                    <p><codeph>unterlassen/</codeph>
-                        <b>and</b>
-                        <codeph>vornemlich</codeph> = possible level 1 (A very strong normalisation
+                    <p><codeph>underlassen/ und  fürnemlich</codeph> = Level 1</p>
+                    <p><codeph>unterlassen/ und  vornemlich</codeph> = possible level 1 (A very strong normalisation
                         has been made.)</p>
                 </div>
                 <div id="section_hpl_k2t_mqb">
