--- a/de/trans/lySatzspiegel.dita
+++ b/de/trans/lySatzspiegel.dita
@@ -13,7 +13,7 @@
             werden. </p>
         <p>
             <imagemap id="imagemap_rbs_xrp_ktb">
-                <image href="images/trSatzspiegel.png" id="image_nmt_wrp_ktb" scale="30"/>
+                <image href="images/trSatzspiegel.jpg" id="image_nmt_wrp_ktb" scale="50"/>
                 <area>
                     <shape>rect</shape>
                     <coords>1603, 7, 1982, 96</coords>
