--- a/de/trans/lyRand.dita
+++ b/de/trans/lyRand.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="lyRand">
-    <title>Seitenrand</title>
+    <title>Seitenrand (Border)</title>
     <body>
         <p>Der Seitenrand grenzt die gesamten Bestandteile (u. a. Kolumnentitel, Seitenzahl bis hin
             zur Bogensignatur) Seite von Teilen die nicht zum Text gehören (u. a. handschriftliche
