--- a/de/trans/lySatzspiegel.dita
+++ b/de/trans/lySatzspiegel.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="lySatzspiegel">
-    <title>Satzspiegel</title>
+    <title>Satzspiegel (PrintSpace)</title>
     <body>
         <p>Im Druckgewerbe wird die eigentlich nutzbare Fläche einer Buchseite (Einfach- oder
             Doppelseite) als Satzspiegel bezeichnet. Er ist mit Ausnahme von Titelblatt und
