--- a/en/trans/lyLeserichtung.dita
+++ b/en/trans/lyLeserichtung.dita
@@ -3,35 +3,66 @@
 <topic id="lyLeserichtung">
     <title>ReadingOrder</title>
     <body>
-       
-<p>Individual page elements are grouped in order not to break up content-related and formal
-            connections. For such a grouping, a reading order can usually be specified. A
-            ReadingOrder only exists between <b>Regionen</b>. The reading order within a line is
-            only determined by the order of the individual word elements, it is not marked
-            explicitly.  </p>
-        <p>This is done with the element <codeph>&lt;ReadingOrder></codeph>. </p>
-        <p><ul id="ul_j2l_lx1_vfb"><li>If the elements are related to each other (e.g. a heading and the following paragraph), the
-                    reading direction is classified as "ordered". In this case the element
-                        <codeph>&lt;OrderedGroup&gt;</codeph> must be used.</li>
-                <li>If the elements are equal (e.g. advertising) and stand alone, the reading
-                    direction is classified as "unordered". In this case the element </li>
-                <li>
-                    <codeph>&lt;UnorderedGroup&gt;</codeph>must be used.</li>
-            </ul></p>
-        <p>The reading direction is determined by a consecutive numbering (starting at zero). The
-            regions of a page are first sorted from left to right (right to left in the case of
-            counterclockwise fonts) and from top to bottom, taking column divisions into account. </p>
-        <p>Elements which are situated outside the print space (e.g. marginalia or catch words) are
-            alyways considered to be read after the print space.</p>
-        <example><title>ReadingOrder in PAGE XML</title><codeblock outputclass="language-xml">&lt;ReadingOrder>
-            &lt;OrderedGroup id="ro_1542194237187" caption="Regions reading order">
-            &lt;RegionRefIndexed index="0" regionRef="r_1"/>
-            &lt;RegionRefIndexed index="1" regionRef="r_2"/>
-            &lt;/OrderedGroup>
-&lt;/ReadingOrder></codeblock></example>
+        <p>In order not to break content and formal connections, regions on a page are ordered and
+            grouped with a ReadingOrder (reading direction). A ReadingOrder exists exclusively
+            between <b>regions</b>. A ReadingOrder is used to define an order of regions. The
+            reading direction in a line is only determined by the order of the individual Word
+            elements, an explicit marking is not provided.  </p>
+        <section>
+            <title>Defining the reading direction</title>
+            <p>The definition is pragmatic. That means:</p>
+        <ul id="ul_nd4_l3q_stb">
+            <li>the regions of a page are first to be arranged from left to right (right to left for
+                left-handed fonts) </li>
+            <li>and from top to bottom, taking into account a column division.</li>
+            <li>Footnotes, endnotes are usually to be assigned after the regions like
+                paragraphs.</li>
+            <li>Regions that are outside the <xref href="lySatzspiegel.dita"
+                >print space</xref>, such as marginalia, custodes, and sheet
+                signatures, are always to be considered and assigned after the regions such as
+                headings, paragraphs, or footnotes.</li>
+        </ul>
+        </section>
+        <section>
+            <title>Page coding</title>
+            <p>The ReadingOrder is specified with the <codeph>&lt;ReadingOrder></codeph> element. </p>
+            <ul id="ul_blm_1br_stb">
+                <li>If the elements are related (e.g. a heading and the following paragraph), the
+                    reading order is of the type "ordered". In this case, the &lt;OrderedGroup>
+                    element must be used.<ul id="ul_nry_fbr_stb">
+                        <li>The reading direction for an "ordered" reading direction is indexed and
+                            defined by sequential numbering (starting at
+                            zero).<codeblock id="codeblock_cwc_hz4_ktb" outputclass="language-xml">&lt;ReadingOrder>
+  &lt;OrderedGroup id="ro_1542194237187" caption="Regions reading order">
+      &lt;RegionRefIndexed index="0" regionRef="r_1"/>
+      &lt;RegionRefIndexed index="1" regionRef="r_2"/>
+  &lt;/OrderedGroup>
+&lt;/ReadingOrder></codeblock></li>
+                        <li><xref scope="external"
+                                href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0012.xml"
+                                format="html">Example for a ReadingOrder/OrderedGroup</xref>
+                        </li>
+                    </ul></li>
+                <li>If the elements are of the same type (e.g. advertising) and can stand alone, the
+                    reading direction is of the "unordered" type. In this case, the
+                        <codeph>&lt;UnorderedGroup&gt;</codeph> element must be used.<ul
+                        id="ul_wbh_ycr_stb">
+                        <li>With the "unordered" reading direction, no indexing is
+                            used.<codeblock id="codeblock_hhn_hz4_ktb" outputclass="language-xml">&lt;ReadingOrder>
+  &lt;UnorderedGroup id="ro_1542194237187" caption="Regions reading order">
+      &lt;RegionRef regionRef="r_1"/>
+      &lt;RegionRef regionRef="r_2"/>
+  &lt;/UnorderedGroup>
+&lt;/ReadingOrder></codeblock></li>
+                    </ul></li>
+            </ul>
+        </section>
         <example><title>image examples</title>
 <p><image href="images/lyLeserichtung.png" id="image_oqf_ld4_4bb"/></p>
 <p><image href="images/lyLeserichtung2.png" id="image_y5g_cf4_4bb"/></p>
             <p><image href="images/lyLeserichtung3.png" id="image_n43_qk4_4bb"/></p></example>
     </body>
+    <related-links>
+        <link href="../../en/trans/structur_gtlevel1.dita"/>
+    </related-links>
 </topic>
