general info layout, order

--- a/de/trans/lyAllgemein.dita
+++ b/de/trans/lyAllgemein.dita
@@ -10,24 +10,32 @@ befinden sich verschiedene strukturell sowie inhaltlich unterschiedliche Regione
 TextRegion kann näher spezifiziert werden so u. a. als Kolumnentitel, Überschrift, Absatzregion...
 Innerhalb dieser Regionen können die einzelnen Texte typographische Besonderheiten aufweisen, die
 ebenfalls ausgezeichnet werden können.</p>
-        <p>Die Layout- und Strukturanalyse sollte in den vorgeschlagenen Schritten erfolgen:</p>
+            <p>Abhängig vom <xref
+                href="structur_gtlevel1.dita">Erfassungslevel (Struktur-GT Level)</xref> sollte die Layout- und Strukturanalyse im Allgemeinen
+                folgendes umfassen:</p>
         </context>
         <steps>
+<step>
+                <cmd>Kennzeichnung des <xref href="lySeitentypen.dita">Seitentyps</xref></cmd>
+            </step>
             <step>
-                <cmd>Kennzeichnung des Satzspiegels/Seitenrand</cmd>
+                <cmd>Kennzeichnung des <xref href="lyRand.dita">Seitenrands</xref> sowie Betrachtung
+                    des <xref href="lySatzspiegel.dita">Satzspiegel</xref></cmd>
             </step>
 <step>
-<cmd>Kennzeichnung des Seitentypes</cmd>
-</step>
-<step>
-<cmd>Kennzeichnung der Seitenregionen</cmd>
-</step>
+                <cmd>Kennzeichnung der <xref href="lyTextregionen.dita">Seitenregionen</xref></cmd>
+            </step>
 <step>
 <cmd>Kennzeichnung von spezifischen Regionen auf der Seite</cmd>
 </step>
 <step>
-<cmd>Kennzeichnung von typographischen Besonderheiten</cmd>
-</step>
+                <cmd>Kennzeichnung von <xref href="lyTypographie.dita">typographischen
+                        Besonderheiten</xref></cmd>
+            </step>
+            <step>
+                <cmd>Kennzeichnung der <xref href="lyLeserichtung.dita">Leserichtung</xref></cmd>
+            </step>
         </steps>
     </taskbody>
+    
 </task>
