--- a/de/trans/lyTextregionen.dita
+++ b/de/trans/lyTextregionen.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="lyTextregionen">
-<title>Zweiter Schritt : Seitenregionen</title>
+<title>Seitenregionen</title>
 <body>
 <p>Auf einer Seite befinden sich verschiedene strukturell sowie inhaltliche unterschiedliche
 Regionen. Nachdem der Satzspiegel bestimmt und ausgezeichnet wurde, wird das Layout analysiert.
