--- a/en/trans/lySeitentypen.dita
+++ b/en/trans/lySeitentypen.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="seitentypen">
-<title>First Step : The Page Types</title>
+<title>Page Types</title>
 <body>
 <p>
 <div>From a structural point of view, a book consists of different page types. The pages to be
